<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="onboarding_start_button" type="id" />
    <item name="onboarding_recycler" type="id" />
    <item name="onboarding_indicator" type="id" />
    <item name="onboarding_dot_daily" type="id" />
    <item name="onboarding_dot_question" type="id" />
    <item name="onboarding_dot_records" type="id" />
    <item name="onboarding_page_art" type="id" />
    <item name="onboarding_page_title" type="id" />
    <item name="onboarding_page_body" type="id" />
    <item name="local_mode_button" type="id" />
    <item name="local_entry_daily_preview_button" type="id" />
    <item name="auth_login_tab" type="id" />
    <item name="auth_register_tab" type="id" />
    <item name="auth_login_form" type="id" />
    <item name="auth_register_form" type="id" />
    <item name="auth_login_email" type="id" />
    <item name="auth_login_password" type="id" />
    <item name="auth_register_email" type="id" />
    <item name="auth_register_password" type="id" />
    <item name="auth_register_confirm" type="id" />
    <item name="auth_message" type="id" />
    <item name="auth_login_button" type="id" />
    <item name="auth_switch_register_button" type="id" />
    <item name="auth_register_button" type="id" />
    <item name="auth_switch_login_button" type="id" />
    <item name="auth_skip_button" type="id" />
    <item name="splash_title" type="id" />
    <item name="splash_subtitle" type="id" />
    <item name="splash_hexagram" type="id" />
    <item name="top_bar" type="id" />
    <item name="bottom_nav" type="id" />
    <item name="question_input" type="id" />
    <item name="question_next_button" type="id" />
    <item name="method_simple_card" type="id" />
    <item name="method_coins_card" type="id" />
    <item name="method_yarrow_card" type="id" />
    <item name="ritual_skip_button" type="id" />
    <item name="result_note_input" type="id" />
    <item name="result_save_button" type="id" />
    <item name="result_share_button" type="id" />
    <item name="records_search_input" type="id" />
    <item name="records_list" type="id" />
    <item name="records_method_all_chip" type="id" />
    <item name="records_method_coins_chip" type="id" />
    <item name="records_method_yarrow_chip" type="id" />
    <item name="records_method_simple_chip" type="id" />
    <item name="records_change_all_chip" type="id" />
    <item name="records_change_with_chip" type="id" />
    <item name="records_change_without_chip" type="id" />
    <item name="records_no_results" type="id" />
    <item name="profile_dark_mode_switch" type="id" />
    <item name="profile_font_size" type="id" />
    <item name="profile_font_size_value" type="id" />
    <item name="profile_reduce_motion_switch" type="id" />
    <item name="profile_default_method" type="id" />
    <item name="profile_default_method_value" type="id" />
    <item name="profile_auto_save_switch" type="id" />
    <item name="profile_reminder_switch" type="id" />
    <item name="profile_reminder_time" type="id" />
    <item name="profile_reminder_time_value" type="id" />
    <item name="profile_export_json" type="id" />
    <item name="profile_export_text" type="id" />
    <item name="profile_delete_all" type="id" />
    <item name="profile_account_mode_value" type="id" />
    <item name="profile_account_email_value" type="id" />
    <item name="profile_auth_entry" type="id" />
    <item name="profile_change_password" type="id" />
    <item name="profile_logout" type="id" />
    <item name="profile_delete_account" type="id" />
    <item name="profile_info_group" type="id" />
    <item name="profile_appearance_group" type="id" />
    <item name="profile_divination_group" type="id" />
    <item name="profile_data_group" type="id" />
    <item name="bottom_nav_daily" type="id" />
    <item name="bottom_nav_divination" type="id" />
    <item name="bottom_nav_records" type="id" />
    <item name="bottom_nav_learn" type="id" />
    <item name="bottom_nav_profile" type="id" />
    <item name="top_bar_toolbar" type="id" />
    <item name="bottom_navigation" type="id" />
...
    <item name="settings_row_value" type="id" />
    <item name="settings_row_toggle" type="id" />
    <item name="result_question_card" type="id" />
    <item name="result_question_text" type="id" />
    <item name="result_hero_card" type="id" />
    <item name="result_hexagram" type="id" />
    <item name="result_title" type="id" />
    <item name="result_tags" type="id" />
    <item name="result_insight" type="id" />
    <item name="result_relation" type="id" />
    <item name="result_changing_summary" type="id" />
    <item name="result_changed_lines" type="id" />
    <item name="result_blind_spot" type="id" />
...
    <item name="result_classical_text" type="id" />
    <item name="result_share_preview" type="id" />
    <item name="daily_greeting" type="id" />
    <item name="daily_card" type="id" />
    <item name="daily_chips" type="id" />
    <item name="daily_hexagram" type="id" />
    <item name="daily_title" type="id" />
    <item name="daily_judgment" type="id" />
    <item name="daily_summary" type="id" />
    <item name="daily_do_items" type="id" />
    <item name="daily_avoid_items" type="id" />
    <item name="daily_reflection_input" type="id" />
    <item name="daily_cast_button" type="id" />
    <item name="daily_records_button" type="id" />
    <item name="daily_learn_button" type="id" />
    <item name="question_count" type="id" />
    <item name="question_presets" type="id" />
    <item name="method_next_button" type="id" />
    <item name="method_simple_status" type="id" />
    <item name="method_coins_status" type="id" />
    <item name="method_yarrow_status" type="id" />
    <item name="method_simple_icon" type="id" />
    <item name="method_coins_icon" type="id" />
    <item name="method_yarrow_icon" type="id" />
    <item name="method_simple_title" type="id" />
    <item name="method_coins_title" type="id" />
    <item name="method_yarrow_title" type="id" />
...
    <item name="method_yarrow_detail" type="id" />
    <item name="ritual_header" type="id" />
    <item name="ritual_progress" type="id" />
    <item name="ritual_focus" type="id" />
    <item name="yarrow_top_bar" type="id" />
    <item name="yarrow_bottom_nav" type="id" />
    <item name="yarrow_step_title" type="id" />
    <item name="yarrow_step_body" type="id" />
    <item name="yarrow_progress" type="id" />
    <item name="yarrow_line_values" type="id" />
    <item name="yarrow_next_button" type="id" />
    <item name="yarrow_quick_button" type="id" />
    <item name="learn_search_input" type="id" />
    <item name="learn_filter_all_chip" type="id" />
    <item name="learn_filter_upper_chip" type="id" />
    <item name="learn_filter_lower_chip" type="id" />
    <item name="learn_filter_favorites_chip" type="id" />
    <item name="learn_list" type="id" />
    <item name="learn_no_results" type="id" />
...
