...
                style="@style/IChingPageTitle"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:text="第15卦｜謙" />

            <TextView
                android:id="@id/hex_detail_summary"
                style="@style/IChingBodyText"
                android:gravity="center"
                android:textSize="18sp"
...
